[wcag] Fix contrast on dashboard subheading

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -2904,6 +2904,10 @@ select, .select2-choice {
 
 [data-module="dashboard"] {
   margin-top: 20px;
+
+  & .page-heading small {
+    color: @grey4;
+  }
 }
 
 #followee-filter {
